# Sistemas_embebidos_avanzados

./: .gitignore  README.md
APDS-9960/: CMakeLists.txt  README.md  sdkconfig
APDS-9960/apds9960_driver/: apds9960.c  platform_i2c_esp32s3.c
APDS-9960/main/: CMakeLists.txt  sensorRGB.c
APDS9960-driver/: CMakeLists.txt  README.md
APDS9960-driver/main/: sensorRGB.c
AS5600_HAL_Library/: Doxyfile  README.md  sdkconfig
AS5600_HAL_Library/main/: platform_esp32s3.h
C libraries/: README.md
C libraries/AS5600_HAL_Library/: README.md  mainpage.dox
C libraries/TM151-driver/: README.md  mainpage.dox
C libraries/VL6180X-driver/: Doxyfile  mainpage.dox
C_libraries/: CMakeLists.txt
C_libraries/main/: CMakeLists.txt
Fusion_sensores/: CMakeLists.txt
Fusion_sensores/main/: CMakeLists.txt  hello_world_main.c
PID-LIBRARY/main/: CMakeLists.txt
T-AS5600/: CMakeLists.txt
T-AS5600/main/: CMakeLists.txt
TM151/: CMakeLists.txt
TM151/main/: CMakeLists.txt  TM151.cpp
VL6180/: CMakeLists.txt
VL6180/main/: CMakeLists.txt
VL6180X-driver/: README.md
VL6180X-driver/main/: i2c_vl6180x_calibration.c  i2c_vl6180x_irq.c  i2c_vl6180x_main.c
Wifi_example/: CMakeLists.txt
Wifi_example/main/: CMakeLists.txt  Wifi_example.c
alarm-example/: CMakeLists.txt  sdkconfig
alarm-example/main/: CMakeLists.txt  alarm_example.c
apds9960_driver/: Doxyfile  READAME.md  mainpage.dox  sdkconfig
apds9960_driver/apds9960_driver/: apds9960.c
apds9960_driver/main/: sensorRGB.c
as5600/: CMakeLists.txt
as5600/as5600/: CMakeLists.txt  as5600.cpp
as5600/as5600_driver/: CMakeLists.txt  (+1 more)
as5600_driver/: README.md
gpio_example/: CMakeLists.txt
pid-library/: CMakeLists.txt  sdkconfig.old
robot-mov/: CMakeLists.txt  README.md  index.html  sdkconfig
server_example/: CMakeLists.txt  README.md
wheel-movement/: CMakeLists.txt  sdkconfig  sdkconfig.old  sdkconfigsq
wheel-movement/main/: CMakeLists.txt  Kconfig.projbuild  encoder_test.c  esc_calibration.c  main.c  main_pid.c  pid_calibration.c  s-curve_profile.c  sensor_fusion.c
(+76 files in other folders)
